--- a/project.json
+++ b/project.json
@@ -11,6 +11,9 @@
     },
     "lang.cpp": {
         "include": ["include"],
-        "cpp-standard": "c++17"
+        "cpp-standard": "c++17",
+        "{os linux}": {
+            "lib": ["pthread"]
+        }
     }
 }
