--- a/project.json
+++ b/project.json
@@ -12,7 +12,7 @@
     "lang.cpp": {
         "include": ["include"],
         "cpp-standard": "c++17",
-        "{os linux}": {
+        "${os linux}": {
             "lib": ["pthread"]
         }
     }
